--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 *.iml
 .gradle
 /local.properties
-/.idea
+.idea
+/.idea/*
 .DS_Store
 /build
 /captures
+/out
 .externalNativeBuild
 .cxx
-local.properties
+.gradle/*
+/out/*
