--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,4 @@
-dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
 include ':module'
+
+import org.apache.tools.ant.DirectoryScanner
+DirectoryScanner.removeDefaultExclude('**/.gitattributes')
